Fix Update Modal Not Showing Up and Add Date (#1224)
Fixes the update modal not showing up when the game is launched. The fix
was the the github timestamps were parsed in ms but we save the last
viewed timestamp in seconds. Additionally there was a bug with the debug
config.

--- a/client/src/components/updates/updates.module.scss
+++ b/client/src/components/updates/updates.module.scss
@@ -5,7 +5,7 @@
 	overflow-y: auto;
 	color: var(--text-light);
 	gap: 10px;
-	max-height: 40vh;
+	max-height: 60vh;
 	height: 100%;
 }
 
@@ -15,6 +15,13 @@
 	text-align: left;
 }
 
+h1 {
+    display: inline
+}
+
+.shortDate {
+	color: var(--text-light);
+}
 
 a:link {
 	color: inherit;
